# A2UI

./: .codespellrc  .gitattributes  .gitignore  .gitmodules  .prettierignore  404.html  A2UI_TECHNICAL_ARCHITECTURE.md  ABUSE - UNAUTHORIZED  ANDROID_GUIDE.md  CHANGELOG.md  CODING_STYLE.md  CONTRIBUTING.md  CONTRIBUTORS  LICENSE  Makefile  PROPOSAL.md  README.md  hooks.py  index.html  manifest.json  mkdocs.yaml  mkdocs.yml  package-lock.json  package.json  patch.diff  pr.md  pr_comments.json  pr_description.md  pubspec.yaml  requirements-docs.txt  sitemap.xml  types_design.md
.claude/: settings.json
.gemini/: GEMINI.md  config.yaml  styleguide.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: a2a_agents_python.yml  auto-assignment.yml  check_license.yml  check_private_index.yml  composer_build_and_test.yml  cpp_agent_sdk_build_and_test.yml  docs.yml  e2e_test.yaml  editor_build.yml  editor_build_and_test.yml  enforce-formatting.yml  eval.yaml  flutter_packages_test.yaml  (+18 more)
.scripts/: README.md
a2a_agents/cpp/: CMakeLists.txt  README.md
a2a_agents/cpp/include/a2ui/: validation.hpp
a2a_agents/cpp/src/: validation.cpp
a2a_agents/cpp/tests/: test_validation.cpp
a2a_agents/python/adk/: pyproject.toml
a2a_agents/python/adk/samples/contact_lookup/: __main__.py  a2ui_schema.py  agent_executor.py  pyproject.toml
a2a_agents/python/adk/samples/orchestrator/: README.md  agent.py  agent_executor.py  part_converters.py  pyproject.toml
a2a_agents/python/adk/samples/restaurant_finder/: __main__.py  agent.py  agent_executor.py  prompt_builder.py  pyproject.toml  streaming_parser.md  tools.py
a2a_agents/python/adk/samples/rizzcharts/: a2ui_toolset.py  agent.py  agent_executor.py  component_catalog_builder.py  part_converter.py  pyproject.toml  rizzcharts_catalog_definition.json  tools.py
a2a_agents/python/adk/samples/rizzcharts/examples/rizzcharts_catalog/: map.json
a2a_agents/python/adk/samples/rizzcharts/examples/standard_catalog/: chart.json  map.json
a2ui-composer/: .gitignore  README.md  package.json  pnpm-lock.yaml
a2ui_protocol/: index.html
agent/adk/: pyproject.toml
agent/adk/samples/contact_lookup/: a2ui_examples.py
agent_sdks/: agent_sdk_guide.md
agents/: index.html
angular/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
catalogs/: index.html
client_to_server_actions/: index.html
community/: index.html
composer/: index.html
conformance-storybook/: package-lock.json  package.json  tsconfig.json
datasets/: v0_9_prompts.yaml
docs/: a2ui_protocol.md  agents.md  catalogs.md  client_to_server_actions.md  community.md  ecosystem.md  glossary.md  index.md  quickstart.md  renderers.md  roadmap.md  transports.md
docs_private/: a2ui_protocol.md
editor/: package-lock.json  package.json
eval/: DESIGN.md  README.md  genkit.conf.js  pyproject.toml  run.sh  tasks.py
eval/a2ui_eval/: __init__.py  dataset.py  models.py  scorers.py  solvers.py  tasks.py
eval/dart_and_flutter/: pubspec.yaml
eval/dart_and_flutter/test/: infra_test.dart  restaurant_finder_test.dart
eval/dart_and_flutter/test/test_infra/: restaurant_finder.dart  shell_utils.dart
eval/datasets/: v0_9_prompts.yaml
eval/src/: basic_schema_matcher.ts  dev.ts  flows.ts  index.ts  message_type_matcher.ts  models.ts  prompts.ts  schema_matcher.ts  surface_update_schema_matcher.ts  validator.ts
eval/tests/: test_dataset.py  test_run_ci_evals.py  test_scorers.py  test_semantic_scorer.py  test_solvers.py  test_utils.py
gallery/: README.md  angular.json  package-lock.json  package.json
glossary/: index.html
md/: chatgpt_structured_output.md
plans/: deletion_plan_contact_sample.md  deletion_plan_part1_lit_shell.md  deletion_plan_part2_composer.md  deletion_plan_part2_sdk_link_removal.md  deletion_plan_part3_core_python.md  deletion_plan_part3_sdk_tests.md  deletion_plan_part4_core.md  deletion_plan_part4_core_angular.md  deletion_plan_part5_refactor_samples.md
quickstart/: index.html
renderers/: README.md  index.html  package-lock.json  package.json
roadmap/: index.html
samples/: README.md
samples/agent/adk/chat_ui_builder/: README.md  __init__.py  __main__.py  app.py  compiler.py  design_lint.py  intent_compiler.py  intent_plan.py  layout_ir.py  layout_policy.py  models.py  planning_stream.py  prompting.py  pyproject.toml  region_archetypes.py  service.py  settings.py  skeleton_compiler.py
samples/agent/adk/chat_ui_builder/tests/: test_region_archetypes.py
samples/agent/adk/landscape_architect/: README.md  __init__.py  __main__.py  a2ui_examples.py  a2ui_ext.py  agent.py  agent_executor.py  prompt_builder.py  pyproject.toml  tools.py
samples/agent/langgraph/restaurant_finder/: README.md  __main__.py  a2ui_examples.py  agent.py  agent_executor.py  prompt_builder.py  pyproject.toml  restaurant_ui_examples.json  test_determinism.py  tools.py
samples/agent/mcp/mcp-apps-basic-host/server/: pyproject.toml  server.py
samples/agent/mcp/mcp-apps-basic-host/server/apps/: app.html
scripts/: auto-assignment.mjs  build_catalog.py  create_issue.sh  fix_format.sh  fix_licenses.sh  test_with_ai.sh
search/: search_index.json
tools/: add_license.sh
transports/: index.html
web/: README.md  comparison.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+3772 files in other folders)
