[project]
name = "a2ui-restaurant-finder-langgraph"
version = "0.1.0"
description = "Sample LangGraph-based Restaurant finder agent that uses a2ui UI."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langgraph",
    "langchain",
    "langchain-google-genai",
    "a2a-sdk>=0.3.0",
    "click>=8.1.8",
    "google-adk>=1.8.0",
    "python-dotenv>=1.1.0",
    "jsonschema>=4.0.0",
    "a2ui",
    "uvicorn",
    "starlette",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
a2ui = { path = "../../../../a2a_agents/python/a2ui_extension", editable = true }
