[project]
name = "mcp-apps-basic-server"
version = "0.1.0"
description = "A basic MCP Server that provides a UI resource and tools."
dependencies = [
    "click>=8.1.8",
    "mcp[cli]>=1.2.0",
    "sse-starlette>=3.3.4",
    "starlette>=0.45.3",
    "uvicorn>=0.34.0",
]

[project.scripts]
mcp-apps-basic-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
